# Media-Intelligence-Dashboard

./: .env.example  .gitignore  README.md  start.bat
backend/: analyzer.py  collector.py  database.py  main.py  media_intelligence.db  pyproject.toml
backend/routers/: draft.py  issues.py
frontend/: package-lock.json
frontend/src/: App.jsx  api.js
frontend/src/pages/: Dashboard.jsx  IssueDetail.jsx
